--- a/index.html
+++ b/index.html
@@ -190,22 +190,22 @@ usg=AFQjCNHYPAw5-h7YOM3NbYxHACZyvlze9w">
   <p class="c3"><span class="c5">$ ssh cs61c-<i style="color:red">XX</i>@hive<i style="color:red">N</i>.cs.berkeley.edu</span></p>
   <br>
 
-  <p class="c3"><span class="c4">Navigate to your git repo and add the project2 skeleton as a remote. (If you mess up this step, edit .git/config to fix your git configuration manually)<span></p>
+  <p class="c3"><span class="c4">Navigate to your git repo and add the project2 template as a remote. (If you mess up this step, edit .git/config to fix your git configuration manually)<span></p>
 
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
   <p>
 $ cd ~/Git/cs61c-*
 <br>
-$ git remote add proj2-skeleton git://github.com/ucberkeley-cs61c/proj2-skeleton.git
+$ git remote add proj2 git://github.com/ucberkeley-cs61c/proj2.git
 <br>
 <br>
 </p>
 
-  <p class="c3"><span class="c4">Pull the project skeleton into your repo, and take a look at the new files. If the skeleton is updated, you can re-run this command to pull in the latest changes.<span></p>
+  <p class="c3"><span class="c4">Pull the project template into your repo, and take a look at the new files. If the template is updated, you can re-run this command to pull in the latest changes.<span></p>
   <p>
 <br>
-$ git pull proj2-skeleton master
+$ git pull proj2 master
 <br>
 </p>
   <p class="c3"><span class="c4">&nbsp;</span></p>
