add union understanding admonishment

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ usg=AFQjCNEisMmSfg167wimWxnzPlkOuF6pNg">ELF</a></span>
   have an example of an R-type, I-type, and J-type instruction.</p>
   <br>
   <p><i>
-    You should read and understand the definitions in <b>processor.h</b> before starting the project. If they don't make sense to you, re-read chapter 6 of K&R, which covers structs, bitfields, and unions.
+    It is critical that you read and understand the definitions in <b>processor.h</b> before starting the project. If they look mysterious, re-read chapter 6 of K&R, which covers structs, bitfields, and unions. Check yourself: why does sizeof(inst_t) == 4?
   </i></p>
 
   <p class="c3"><span class="c4">&nbsp;</span></p>
