fix spaces in quotes

--- a/index.html
+++ b/index.html
@@ -1130,8 +1130,7 @@ H (4th ed.) Section 2.9 and Appendix B, particularly if
   <h2 class="c3 c12"><span class="c4">Initially, you will be able to run a program called
   &ldquo;
 </span><span class="c5">simple</span><span class="c4">&rdquo;
-, which only uses
-  the pink colored instructions, by running the following commands:</span></h2>
+, which only uses the pink colored instructions, by running the following commands:</span></h2>
 
   <p class="c3"><span class="c5">&nbsp;</span></p>
 
@@ -1189,16 +1188,12 @@ H (4th ed.) Section 2.9 and Appendix B, particularly if
 
   <ol class="c18">
     <li class="c20" value="1"><span class="c5">-i</span> <span class="c4">runs the
-    simulator in &ldquo;
-interactive mode,&rdquo;
- in which the simulator executes an
+    simulator in &ldquo;interactive mode,&rdquo; in which the simulator executes an
     instruction each time the Enter key is pressed. &nbsp;The disassembly of each
     executed instruction is printed.</span></li>
 
     <li class="c20" value="1"><span class="c5">-t</span> <span class="c4">runs the
-      simulator in &ldquo;
-tracing mode,&rdquo;
- in which each instruction executed is printed.</span></li>
+      simulator in &ldquo;tracing mode,&rdquo; in which each instruction executed is printed.</span></li>
 
     <li class="c20"><span class="c5">-r</span> <span class="c4">instructs the simulator
     to print the contents of all 32 registers after each instruction is executed.
@@ -1283,13 +1278,9 @@ tracing mode,&rdquo;
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
   <p class="c3"><span class="c4">Run the disassembly test by typing in
-  &ldquo;
-</span><span class="c5">make disasmtest&rdquo;
-</span><span class="c4">. &nbsp;If
-  your disassembly matches the output, you will get a &ldquo;
-</span><span class=
-  "c5">DISASSEMBLY TEST PASSED!</span><span class="c4">&rdquo;
- message.</span></p>
+  &ldquo;</span><span class="c5">make disasmtest&rdquo;</span><span class="c4">. &nbsp;If
+  your disassembly matches the output, you will get a &ldquo;</span><span class=
+  "c5">DISASSEMBLY TEST PASSED!</span><span class="c4">&rdquo; message.</span></p>
 
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
@@ -1306,9 +1297,7 @@ tracing mode,&rdquo;
 
   <p class="c3"><span class="c4">If your disassembly does not match the output, you will
   get the difference between the reference output and your output, and a
-  &ldquo;
-</span><span class="c5">DISASSEMBLY TEST FAILED!</span><span class="c4">&rdquo;
-
+  &ldquo;</span><span class="c5">DISASSEMBLY TEST FAILED!</span><span class="c4">&rdquo;
   message. &nbsp;Make sure you pass this test before submitting your first
   task.</span></p>
 
