change tag names

--- a/index.html
+++ b/index.html
@@ -1338,11 +1338,11 @@ H (4th ed.) Section 2.9 and Appendix B, particularly if
 
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
-  <p class="c3"><span class="c9 c25">STOP. &nbsp;You have now done enough work for the intermediate checkpoint, due on the 19th. For the intermediate milestone, tag the point in history you want to submit as "proj2-checkpoint" and push your changes to github:</span></p>
+  <p class="c3"><span class="c9 c25">STOP. &nbsp;You have now done enough work for the intermediate checkpoint, due on the 19th. For the intermediate milestone, tag the point in history you want to submit as "proj2-1" and push your changes to github:</span></p>
 
   <p class="c3"><span class="c9 c25">&nbsp;</span></p>
 
-  <p class="c3"><span class="c16 c25">$ git tag -f proj2-checkpoint HEAD</span></p>
+  <p class="c3"><span class="c16 c25">$ git tag -f proj2-1 HEAD</span></p>
   <p class="c3"><span class="c16 c25">$ git push</span></p>
   <p class="c3"><span class="c16 c25">$ git push --tags</span></p>
 
@@ -1489,7 +1489,7 @@ H (4th ed.) Section 2.9 and Appendix B, particularly if
 
   <p class="c3"><span class="c9">&nbsp;</span></p>
 
-  <p class="c3"><span class="c16">$ git tag -f proj2-submit HEAD</span></p>
+  <p class="c3"><span class="c16">$ git tag -f proj2-2 HEAD</span></p>
   <p class="c3"><span class="c16">$ git push</span></p>
   <p class="c3"><span class="c16">$ git push --tags</span></p>
 
