--- a/index.html
+++ b/index.html
@@ -209,10 +209,7 @@ $ git pull proj2 master
 </p>
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
-  <p class="c3"><span class="c4">The proj2 directory includes the following files.
-  &nbsp;You need to modify the files colored blue. &nbsp;You may find it
-  helpful to look at the files colored black. &nbsp;You definitely do not need to look at
-  the files colored red.</span></p>
+  <p class="c3"><span class="c4">If you are able, run 'gitk' for a graphical visualization of the merge. The proj2 directory includes the following files. You need to modify the files colored blue. &nbsp;You may find it helpful to look at the files colored black. &nbsp;You definitely do not need to look at the files colored red.</span></p>
 
 <br>
 
@@ -1342,7 +1339,7 @@ H (4th ed.) Section 2.9 and Appendix B, particularly if
 
   <p class="c3"><span class="c9 c25">&nbsp;</span></p>
 
-  <p class="c3"><span class="c16 c25">$ git tag -f proj2-1 HEAD</span></p>
+  <p class="c3"><span class="c16">$ git tag -f proj2-1 <a href="http://schacon.github.com/git/gitrevisions.html#_specifying_revisions"><i>&lt;rev&gt;</i></a></span></p>
   <p class="c3"><span class="c16 c25">$ git push</span></p>
   <p class="c3"><span class="c16 c25">$ git push --tags</span></p>
 
@@ -1489,7 +1486,7 @@ H (4th ed.) Section 2.9 and Appendix B, particularly if
 
   <p class="c3"><span class="c9">&nbsp;</span></p>
 
-  <p class="c3"><span class="c16">$ git tag -f proj2-2 HEAD</span></p>
+  <p class="c3"><span class="c16">$ git tag -f proj2-2 <a href="http://schacon.github.com/git/gitrevisions.html#_specifying_revisions"><i>&lt;rev&gt;</i></a></span></p>
   <p class="c3"><span class="c16">$ git push</span></p>
   <p class="c3"><span class="c16">$ git push --tags</span></p>
 
