add gitk visual

--- a/index.html
+++ b/index.html
@@ -209,9 +209,13 @@ $ git pull proj2 master
 </p>
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
-  <p class="c3"><span class="c4">If you are able, run 'gitk' for a graphical visualization of the merge. The proj2 directory includes the following files. You need to modify the files colored blue. &nbsp;You may find it helpful to look at the files colored black. &nbsp;You definitely do not need to look at the files colored red.</span></p>
-
-<br>
+  <p class="c3"><span class="c4">If you are able, run 'gitk' for a graphical visualization of the merge. If all has gone well, you should be looking at something like this, where 'master' refers to your current branch and 'remotes/origin/master' is the copy on github:</span></p>
+  <div style="padding:15px">
+  <img src="gitk.png" title="gitk visualization">
+  </div>
+  
+  
+  <p><span>The proj2 directory includes the following files. You need to modify the files colored blue. &nbsp;You may find it helpful to look at the files colored black. &nbsp;You definitely do not need to look at the files colored red.</span></p>
 
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
