update to point out proj1 partner situation

--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@ Xbody {
   <p class="c3"><span class="c22">Project due Sundary Feb 26 @ 23:59:59 PST</span></p>
 
 
+  <div style="border:1px solid green; padding: 5px; margin-top: 20px; background-color: #dfd; width:70%; font-size: large; border-radius: 10px">
+  This is an individual assignment. If your partner from project 1 has access to your repository, please avoid pushing your project 2 code to github until we have removed this notice. If you want to work on both projects at the same time, this is a good opportunity to learn about <a href="http://gitref.org/branching">branching</a> in git.
+    </div>
+
   <h2 class="c3 c12"><span class="c19">Background</span></h2>
 
   <p class="c3"><span class="c4">In this project, you will create an instruction
@@ -1339,7 +1343,7 @@ H (4th ed.) Section 2.9 and Appendix B, particularly if
 
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
-  <p class="c3"><span class="c9 c25">STOP. &nbsp;You have now done enough work for the intermediate checkpoint, due on the 19th. For the intermediate milestone, tag the point in history you want to submit as "proj2-1" and push your changes to github:</span></p>
+  <p class="c3"><span class="c9 c25">This is the end of part 1 of the project. &nbsp;You have now done enough work for the intermediate checkpoint, due on the 19th. For the intermediate milestone, tag the point in history you want to submit as "proj2-1" and push your changes to github:</span></p>
 
   <p class="c3"><span class="c9 c25">&nbsp;</span></p>
 
@@ -1350,7 +1354,7 @@ H (4th ed.) Section 2.9 and Appendix B, particularly if
   <p class="c3"><span class="c9 c17">&nbsp;</span></p>
 
   <p class="c3"><span class="c9 c25">Double check that your tag appears on github (under the Tags tab of the repository view). Only changes to <b>proj2/disassemble.c</b> will be considered
-    by the autograder for the checkpoint. If you want to update your submission, just repeat the git tag -f command and push the updated tag. We will take a snapshot of all git repos at each submit deadline and again for late submissions. If you update the tag after the deadline, your project will be considered late. Push early and often!</span></p>
+    by the autograder for the checkpoint. If you want to update your submission, just repeat the git tag -f command and push the updated tag. We will take a snapshot of all git repos at each submit deadline and again for late submissions. If you update the tag after the deadline, your project may be considered late.</span></p>
 
   <br>
   <p class="c3"><span class="c4">Your</span> <span class="c4 c22">second task</span>
