add overview diagram

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ Xbody {
   <div class="interior">
     <br>
   <div class="main">
+<img src="execution.png" style="float:right">
     <span class="c23">CS61C Project 2</span><br>
 
 <span class="c23">MIPS Instruction Set Simulator</span>
@@ -160,7 +161,7 @@ Xbody {
   <p class="c3"><span class="c22">Project due Sundary Feb 26 @ 23:59:59 PST</span></p>
 
 
-  <div style="border:1px solid green; padding: 5px; margin-top: 20px; background-color: #dfd; width:70%; font-size: large; border-radius: 10px">
+  <div style="border:1px solid green; padding: 5px; margin-top: 20px; background-color: #dfd; width:55%; font-size: large; border-radius: 10px">
   This is an individual assignment. If your partner from project 1 has access to your repository, please avoid pushing your project 2 code to github until we have removed this notice. If you want to work on both projects at the same time, this is a good opportunity to learn about <a href="http://gitref.org/branching">branching</a> in git.
     </div>
 
@@ -172,8 +173,7 @@ Xbody {
   what is effectively a miniature version of MARS, but better yet, you&rsquo;ll be able
   to run real C programs on your MIPS simulator!</span></p>
 
-  <p class="c3"><span class="c4">&nbsp;</span></p>
-
+<br>
   <p class="c3"><span class="c4">The</span> <span class="c7"><a href=
   "http://www.google.com/url?q=http%3A%2F%2Finst.eecs.berkeley.edu%2F~cs61c%2Fresources%2FMIPS_Green_Sheet.pdf&amp;
 sa=D&amp;
