oops, forgot MARS can't execute binaries

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ Xbody {
   <div class="interior">
     <br>
   <div class="main">
-<img src="execution.png" style="float:right">
+<img src="execution.png" style="float:right; width:450px">
     <span class="c23">CS61C Project 2</span><br>
 
 <span class="c23">MIPS Instruction Set Simulator</span>
