random hive generator

--- a/index.html
+++ b/index.html
@@ -188,9 +188,10 @@ usg=AFQjCNHYPAw5-h7YOM3NbYxHACZyvlze9w">
   <p></p>
 
   <p class="c3"><span class="c4">&nbsp;</span></p>
-  <p class="c3">This project requires a functional mips-gcc to be installed. All the computers in the hive lab (330 soda) satisfy this requirement. It is recommended that you work on the hive computers remotely.</p>
+  <p class="c3">This project requires a functional mips-gcc to be installed. It is recommended that you work on the hive computers remotely. Here's a random machine you can try logging in to:</p>
   <br>
-  <p class="c3"><span class="c5">$ ssh cs61c-<i style="color:red">XX</i>@hive<i style="color:red">N</i>.cs.berkeley.edu</span></p>
+  <p class="c3"><span class="c5">$ ssh -X cs61c-<i style="color:red">XX</i>@hive<script type="text/javascript">document.write(Math.ceil(Math.random()*23));</script>.cs.berkeley.edu</span></p>
+
   <br>
 
   <p class="c3"><span class="c4">Navigate to your git repo and add the project2 template as a remote. (If you mess up this step, edit .git/config to fix your git configuration manually)<span></p>
