emphasis on HIVE

--- a/index.html
+++ b/index.html
@@ -160,11 +160,6 @@ Xbody {
 
   <p class="c3"><span class="c22">Project due Sundary Feb 26 @ 23:59:59 PST</span></p>
 
-
-  <div style="border:1px solid green; padding: 5px; margin-top: 20px; background-color: #dfd; width:55%; font-size: large; border-radius: 10px">
-  This is an individual assignment. If your partner from project 1 has access to your repository, please avoid pushing your project 2 code to github until we have removed this notice. If you want to work on both projects at the same time, this is a good opportunity to learn about <a href="http://gitref.org/branching">branching</a> in git.
-    </div>
-
   <h2 class="c3 c12"><span class="c19">Background</span></h2>
 
   <p class="c3"><span class="c4">In this project, you will create an instruction
@@ -188,7 +183,7 @@ usg=AFQjCNHYPAw5-h7YOM3NbYxHACZyvlze9w">
   <p></p>
 
   <p class="c3"><span class="c4">&nbsp;</span></p>
-  <p class="c3">This project requires a functional mips-gcc to be installed. It is recommended that you work on the hive computers remotely. Here's a random machine you can try logging in to:</p>
+  <p class="c3">This project requires a functional mips-gcc to be installed. <b>The only computers that will work for this project are those in the hive lab.</b> Here's a hive machine you can try logging in to:</p>
   <br>
   <p class="c3"><span class="c5">$ ssh -X cs61c-<i style="color:red">XX</i>@hive<script type="text/javascript">document.write(Math.ceil(Math.random()*23));</script>.cs.berkeley.edu</span></p>
 
