--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ usg=AFQjCNHYPAw5-h7YOM3NbYxHACZyvlze9w">
   <p></p>
 
   <p class="c3"><span class="c4">&nbsp;</span></p>
-  <p class="c3">This project requires a functional mips-gcc to be installed. It is recommended that you work on the hive computers remotely. Here's a random machine you can try logging in to:</p>
+  <p class="c3">This project requires a functional mips-gcc to be installed. <b>The only computers that will work for this project are those in the hive lab.</b> Here's a hive machine you can try logging in to:</p>
   <br>
   <p class="c3"><span class="c5">$ ssh -X cs61c-<i style="color:red">XX</i>@hive<script type="text/javascript">document.write(Math.ceil(Math.random()*23));</script>.cs.berkeley.edu</span></p>
 
