add update item

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@ Xbody {
   <h2 class="c3 c12"><span class="c19">Updates</span></h2>
   <ul style="color: #0a0">
   <li>2/14 - Changed access_ok() spec to require returning 0 for NULL dereferences.</li>
+  <li>2/14 - Fix bugs in submit check script: run 'git pull proj2 master' to update</li>
   </ul>
 
   <h2 class="c3 c12"><span class="c19">Background</span></h2>
