update submit instr

--- a/index.html
+++ b/index.html
@@ -1356,11 +1356,11 @@ H (4th ed.) Section 2.9 and Appendix B, particularly if
   <p class="c3"><span class="c16">$ git tag -f proj2-1 <a href="http://schacon.github.com/git/gitrevisions.html#_specifying_revisions"><i>&lt;rev&gt;</i></a></span></p>
   <p class="c3"><span class="c16 c25">$ git push</span></p>
   <p class="c3"><span class="c16 c25">$ git push --tags</span></p>
+  <p class="c3"><span class="c16">$ make check-part1</span></p>
 
   <p class="c3"><span class="c9 c17">&nbsp;</span></p>
 
-  <p class="c3"><span class="c9 c25">Double check that your tag appears on github (under the Tags tab of the repository view). Only changes to <b>proj2/disassemble.c</b> will be considered
-    by the autograder for the checkpoint. If you want to update your submission, just repeat the git tag -f command and push the updated tag. We will take a snapshot of all git repos at each submit deadline and again for late submissions. If you update the tag after the deadline, your project may be considered late.</span></p>
+  <p class="c3"><span class="c9 c25">The make check-part1 command will verify that you have submitted correctly. Only changes to <b>proj2/disassemble.c</b> will be considered by the autograder for the checkpoint. If you want to update your submission, just repeat the git tag -f command and push the updated tag. We will take a snapshot of all git repos at each submit deadline and again for late submissions. If you update the tag after the deadline, your project may be considered late.</span></p>
 
   <br>
   <p class="c3"><span class="c4">Your</span> <span class="c4 c22">second task</span>
@@ -1503,11 +1503,7 @@ H (4th ed.) Section 2.9 and Appendix B, particularly if
   <p class="c3"><span class="c16">$ git tag -f proj2-2 <a href="http://schacon.github.com/git/gitrevisions.html#_specifying_revisions"><i>&lt;rev&gt;</i></a></span></p>
   <p class="c3"><span class="c16">$ git push</span></p>
   <p class="c3"><span class="c16">$ git push --tags</span></p>
-
-  <br>
-  <p class="c3"><span class="c9">Again, check that your changes are tagged correctly on your github account.</span></p>
-
-  <p class="c3"><span class="c5">&nbsp;</span></p>
+  <p class="c3"><span class="c16">$ make check-part2</span></p>
   </div><br></div>
 </body>
 </html>
