--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@ usg=AFQjCNEisMmSfg167wimWxnzPlkOuF6pNg">ELF</a></span>
 
       <tr>
         <td class="c24 c14">
-          <p class="c11"><span class="c5">j address</span></p>
+          <p class="c11"><span class="c5">j target</span></p>
         </td>
 
         <td class="c1">
@@ -675,7 +675,7 @@ usg=AFQjCNEisMmSfg167wimWxnzPlkOuF6pNg">ELF</a></span>
 
       <tr>
         <td class="c24">
-          <p class="c11"><span class="c5">jal address</span></p>
+          <p class="c11"><span class="c5">jal target</span></p>
         </td>
 
         <td class="c13">
